website/src/pages/v3/integrations/integration-with-sveltekit.mdx
---
id: integration-with-sveltekit
title: Integration with SvelteKit
sidebar_label: SvelteKit
type: Guide
---

import { PackageCmd } from '@theguild/components'

[SvelteKit is the fastest way to build svelte apps.](https://kit.svelte.dev/) It is very simple, and let you build frontend & backend in a single place.

You can add GraphQL Yoga with a few lines of code and get the benefits of GraphQL & SvelteKit at the same time. [Envelop ecosystem](https://www.envelop.dev) for example!

## Installation

In a SvelteKit project:import { PackageCmd } from '@theguild/components';

<PackageCmd packages={['graphql', 'graphql-yoga']} />

## Example

### Create your graphql endpoint

Create the file `src/routes/api/graphql.ts`:

```ts
import { createYoga, createSchema } from 'graphql-yoga'
import type { RequestEvent } from '@sveltejs/kit'

const yogaApp = createYoga<RequestEvent>({
  schema: createSchema({
    typeDefs: `
			type Query {
				hello: String
			}
		`,
    resolvers: {
      Query: {
        hello: () => 'SvelteKit - GraphQL Yoga',
      },
    },
  }),
  // Needed to be defined explicitly because our endpoint lives at a different path other than `/graphql`
  graphqlEndpoint: '/api/graphql',
})

export { yogaApp as get, yogaApp as post }
```

> **Simple example** on our GitHub repository [here](https://github.com/dotansimha/graphql-yoga/tree/v3/examples/sveltekit)

> More examples with our **KitQL** library [here](https://github.com/jycouet/kitql) <br />
> The best of all GraphQL ecosystem for SvelteKit.
